--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "morgan": "~1.9.1",
     "node-uuid": "^1.4.8",
     "nodemon": "^2.0.16",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "winston": "^3.7.2"
