--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
@@ -14,12 +15,14 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^28.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "mongoose-uuid-parser": "^0.1.0",
     "morgan": "~1.9.1",
     "node-uuid": "^1.4.8",
     "nodemon": "^2.0.16",
+    "supertest": "^6.2.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2",
